# PAIRL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN-v1.7.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
bsfz/: anlage_3_stand_der_technik.md  anlage_4_spezifikationsauszug.md  style.css
examples/: 01-basic-request.pairl  01-basic-request.rendered.md  02-agent-a-request.pairl  02-agent-a-request.rendered.md  03-agent-b-response.pairl  03-agent-b-response.rendered.md  04-threaded-summary.pairl  04-threaded-summary.rendered.md  05-complex-report.pairl  05-complex-report.rendered.md  06-tool-use-session.pairl  06-tool-use-session.rendered.md  07-turn-attribution.pairl  07-turn-attribution.rendered.md  08-columnar-report.pairl  08-columnar-report.rendered.md  09-extractive-quotes.pairl  09-extractive-quotes.rendered.md  README.md
impl/: .gitignore  README.md
impl/conformance/: README.md  cases.txt
impl/python/: README.md  pyproject.toml
impl/python/pairl/: __init__.py  __main__.py  canonical.py  core.py  render.py  validate.py
impl/python/tests/: test_conformance.py  test_pairl.py
impl/rust/: Cargo.toml  README.md
impl/rust/src/: lib.rs  main.rs
impl/rust/tests/: conformance.rs  validate.rs
impl/typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
impl/typescript/src/: canonical.ts  index.ts  model.ts  parser.ts  render.ts  validate.ts
impl/typescript/test/: conformance.test.ts  pairl.test.ts
scripts/: check_versions.sh
tools/: test_columnar.py  test_turn_markers.py  validator.py
