[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pairl"
version = "1.5.0"
description = "PAIRL v1.5 reference implementation — parser, validator, canonicalizer, and renderer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PAIRL" }]
keywords = ["pairl", "agent", "protocol", "compression", "llm"]

[project.scripts]
pairl = "pairl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pairl"]
