[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pairl"
version = "1.5.1"
description = "PAIRL — compact, lossless agent-to-agent message protocol. Python parser, validator (V1–V12), canonicalizer/hasher, and renderer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PAIRL" }]
keywords = ["pairl", "agent", "protocol", "compression", "llm"]

[project.urls]
Homepage = "https://pairl.dev"
Repository = "https://github.com/dwehrmann/PAIRL"

[project.scripts]
pairl = "pairl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pairl"]
