[package]
name = "pairl"
version = "1.5.0"
edition = "2021"
description = "PAIRL v1.5 parser and validator (rules V1–V12)"
license = "Apache-2.0"
repository = "https://github.com/dwehrmann/PAIRL"
readme = "README.md"

[lib]
name = "pairl"
path = "src/lib.rs"

[[bin]]
name = "pairl-validate"
path = "src/main.rs"

# No external dependencies — std only, so it builds and tests offline.
